@@ -14,6 +14,10 @@ LIBCXXW_NAMESPACE_START
 
 //! Provide a distinct type for a name of a theme-specified font, when
 //! creating a \ref text_param "text parameter".
+//!
+//! The "name" parameter contains the same string that can be passed
+//! as a constructor to a \ref font "INSERT_LIBX_NAMESPACE::w::font",
+//! except that the font family may also refer to a theme-specified font.
 
 struct theme_font {
 
